<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".AboutMeFragment"
    >

    <ImageView
        android:layout_width="300dp"
        android:layout_height="125dp"
        android:src="@drawable/logo_calvin"
        android:contentDescription="@string/logocalvin"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/matkul"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingHorizontal="12dp"
        android:paddingTop="16dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/namaSaya"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingHorizontal="12dp"
        android:paddingTop="16dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prodiSaya"
        android:gravity="center"
        android:textSize="18sp"
        android:paddingHorizontal="12dp"
        android:paddingTop="16dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nimSaya"
        android:gravity="center"
        android:textSize="18sp"
        android:paddingHorizontal="12dp"
        android:paddingTop="16dp"
        />

</LinearLayout>
