<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuessGameFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remaininglivestext"
        android:textSize="32sp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        />

    <TextView
        android:id="@+id/remainingGuesses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultRemainingGuesses"
        android:textSize="32sp"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp"/>



    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp">

        <TextView
            android:id="@+id/hangman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultUnderscore"
            android:textSize="25sp"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.295" />

        <TextView
            android:id="@+id/userGuess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text=""
            android:textSize="24sp"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="@+id/hangman"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inputLetterText"
        android:layout_gravity="center"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editTextLetterInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:autofillHints="Letter"
        android:gravity="center"
        android:inputType="textCapCharacters"
        android:maxLength="1"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/guessButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guessButtonText"
        android:layout_gravity="center"/>

    <TextView
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:textSize="20sp"
        android:text="@string/wrongWordText"
        android:background="@color/citYellow"
        android:gravity="center"/>

    <TextView
        android:paddingTop= "20dp"
        android:id="@+id/wrongLetters"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingHorizontal="20dp"
        android:background="@color/citYellow" />

</LinearLayout>